--- a/examples/parcel/package.json
+++ b/examples/parcel/package.json
@@ -11,6 +11,7 @@
     "parcel-bundler": "^1.9.7"
   },
   "dependencies": {
+    "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "reim": "../../"
