--- a/examples/parcel/.babelrc
+++ b/examples/parcel/.babelrc
@@ -1,4 +1,11 @@
 {
+  "presets": [
+    [ "env", {
+      "targets": {
+        "browsers": "last 1 Firefox versions"
+      }
+    }]
+  ],
   "plugins": [
     "transform-class-properties"
   ]
