--- a/examples/parcel/package.json
+++ b/examples/parcel/package.json
@@ -8,12 +8,14 @@
   },
   "devDependencies": {
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
     "parcel-bundler": "^1.9.7"
   },
   "dependencies": {
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "reim": "../../"
+    "react-reim": "../../packages/react-reim",
+    "reim": "../../packages/reim"
   }
 }
