style(lint): clears lint errors

--- a/.babelrc
+++ b/.babelrc
@@ -1,39 +1,3 @@
 {
-  "presets": [
-    ["env", {
-      "useBuiltIns": false,
-      "modules": false,
-      "exclude": ["transform-regenerator", "transform-async-to-generator"]
-    }],
-    "react",
-    "es2015-rollup"
-  ],
-  "plugins": [
-    ["transform-object-rest-spread",
-      {
-        "useBuiltIns": true
-      }
-    ],
-    "transform-flow-strip-types",
-    "transform-class-properties"
-  ],
-  "env": {
-    "test": {
-      "presets": [
-        ["env", {
-          "exclude": ["transform-regenerator", "transform-async-to-generator"]
-        }],
-        "react"
-      ],
-      "plugins": [
-        ["transform-object-rest-spread",
-          {
-            "useBuiltIns": true
-          }
-        ],
-        "transform-flow-strip-types",
-        "transform-class-properties"
-      ]
-    }
-  }
+  "presets": ["./.babelrc.js"]
 }
