--- a/packages/react-reim/package.json
+++ b/packages/react-reim/package.json
@@ -7,14 +7,13 @@
   "unpkg": "dist/react-reim.js",
   "jsdelivr": "dist/react-reim.js",
   "peerDependencies": {
-    "react": "^16.3.0",
-    "reim": "*"
+    "react": "^16.3.0"
   },
   "devDependencies": {
-    "react": "^16.4.1",
-    "reim": "^0.3.0"
+    "react": "^16.4.1"
   },
   "dependencies": {
-    "immer": "^1.5.0"
+    "lodash": "^4.17.10",
+    "prop-types": "^15.6.2"
   }
 }
