--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "babel-preset-es2015-rollup": "^3.0.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "codacy-coverage": "^3.0.0",
     "cross-env": "^5.2.0",
     "eslint": "^5.2.0",
     "eslint-config-xo-react": "^0.17.0",
