refactor: fixes all linting errors

--- a/examples/parcel/package.json
+++ b/examples/parcel/package.json
@@ -15,7 +15,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-reim": "../../packages/react-reim",
-    "reim": "../../packages/reim"
+    "react-reim": "*",
+    "reim": "*"
   }
 }
