--- a/packages/react-reim/package.json
+++ b/packages/react-reim/package.json
@@ -7,10 +7,10 @@
   "unpkg": "dist/react-reim.js",
   "jsdelivr": "dist/react-reim.js",
   "peerDependencies": {
-    "react": "^16.3.0"
+    "react": "*"
   },
   "devDependencies": {
-    "react": "^16.4.1"
+    "react": "^16.4.2"
   },
   "dependencies": {
     "lodash": "^4.17.10",
