--- a/packages/reim/package.json
+++ b/packages/reim/package.json
@@ -50,7 +50,8 @@
     "xo": "^0.21.1"
   },
   "dependencies": {
-    "immuta": "^1.2.0",
+    "auto-bind": "^1.2.1",
+    "immer": "^1.5.0",
     "lodash": "^4.17.10"
   }
 }
