--- a/packages/react-reim/package.json
+++ b/packages/react-reim/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-reim",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "license": "MIT",
   "main": "dist/react-reim.cjs.js",
   "module": "dist/react-reim.es.js",
@@ -15,5 +15,6 @@
   "dependencies": {
     "lodash": "^4.17.10",
     "prop-types": "^15.6.2"
-  }
+  },
+  "gitHead": "fd68c1090a4bf563cadc6716a878050a3de0da0c"
 }
