--- a/packages/reim/package.json
+++ b/packages/reim/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reim",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "license": "MIT",
   "main": "dist/reim.cjs.js",
   "module": "dist/reim.es.js",
@@ -53,5 +53,6 @@
     "auto-bind": "^1.2.1",
     "immer": "^1.5.0",
     "lodash": "^4.17.10"
-  }
+  },
+  "gitHead": "fd68c1090a4bf563cadc6716a878050a3de0da0c"
 }
