--- a/examples/rxjs/package.json
+++ b/examples/rxjs/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "parcel-bundler": "^1.9.7"
   },
