--- a/packages/reim-persist/package.json
+++ b/packages/reim-persist/package.json
@@ -38,9 +38,11 @@
   },
   "devDependencies": {
     "babel-eslint": "^8.2.6",
+    "dom-storage": "^2.1.0",
     "eslint": "^5.2.0",
     "eslint-config-xo-react": "^0.17.0",
     "eslint-plugin-react": "^7.10.0",
+    "reim": "*",
     "xo": "^0.21.1"
   },
   "dependencies": {
