--- a/packages/reim-persist/package.json
+++ b/packages/reim-persist/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reim-persist",
-  "version": "1.4.2",
+  "version": "1.4.3",
   "license": "MIT",
   "main": "dist/reim-persist.cjs.js",
   "module": "dist/reim-persist.es.js",
@@ -42,10 +42,11 @@
     "eslint": "^5.2.0",
     "eslint-config-xo-react": "^0.17.0",
     "eslint-plugin-react": "^7.10.0",
-    "reim": "^1.4.2",
+    "reim": "^1.4.3",
     "xo": "^0.21.1"
   },
   "dependencies": {
     "lodash": "^4.17.10"
-  }
+  },
+  "gitHead": "d31d01dd142b8216a993688dd3f112b4c397a2a9"
 }
