--- a/packages/reim-persist/package.json
+++ b/packages/reim-persist/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reim-persist",
-  "version": "1.4.6",
+  "version": "1.5.0",
   "license": "MIT",
   "main": "dist/reim-persist.cjs.js",
   "module": "dist/reim-persist.es.js",
@@ -42,11 +42,11 @@
     "eslint": "^5.2.0",
     "eslint-config-xo-react": "^0.17.0",
     "eslint-plugin-react": "^7.10.0",
-    "reim": "^1.4.1",
+    "reim": "*",
     "xo": "^0.21.1"
   },
   "dependencies": {
     "lodash": "^4.17.10"
   },
-  "gitHead": "84f86b576e1fd1aaeb8b10b5a81289f6c3ae0d18"
+  "gitHead": "f03c50307f564526c70259220a2cae0dca0b9a54"
 }
