--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "get-lerna-packages": "^0.1.0",
     "husky": "^0.14.3",
     "jest": "^23.4.2",
-    "lerna": "^3.0.0-rc.0",
+    "lerna": "^3.0.3",
     "lint-staged": "^7.2.0",
     "react-test-renderer": "^16.4.2",
     "regenerator-runtime": "^0.12.0",
@@ -88,6 +88,5 @@
     "rollup-plugin-node-resolve": "^3.3.0",
     "to-pascal-case": "^1.0.0",
     "xo": "^0.21.1"
-  },
-  "dependencies": {}
+  }
 }
