--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,8 @@
   "packages": [
     "packages/*"
   ],
-  "version": "1.5.5",
+  "version": "1.5.6",
   "npmClient": "yarn",
-  "useWorkspaces": true
+  "useWorkspaces": true,
+  "lerna": "2.11.0"
 }
