--- a/packages/reim-persist/package.json
+++ b/packages/reim-persist/package.json
@@ -46,7 +46,8 @@
     "xo": "^0.21.1"
   },
   "dependencies": {
-    "lodash": "^4.17.10"
+    "lodash": "^4.17.10",
+    "reim": "^1.5.6"
   },
   "gitHead": "419591f08507517258271f77077dc7a1d5c1f7af"
 }
