--- a/packages/reim-task/package.json
+++ b/packages/reim-task/package.json
@@ -41,13 +41,11 @@
     "eslint": "^5.2.0",
     "eslint-config-xo-react": "^0.17.0",
     "eslint-plugin-react": "^7.10.0",
-    "reim": "^1.5.6",
     "xo": "^0.21.1"
   },
   "dependencies": {
     "lodash": "^4.17.10",
-    "nanoid": "^1.2.0",
-    "reim": "^1.5.6"
+    "nanoid": "^1.2.0"
   },
   "gitHead": "419591f08507517258271f77077dc7a1d5c1f7af"
 }
