--- a/packages/reim-task/package.json
+++ b/packages/reim-task/package.json
@@ -36,11 +36,15 @@
       "react/button-has-type": 0
     }
   },
+  "peerDependencies": {
+    "reim": "*"
+  },
   "devDependencies": {
     "babel-eslint": "^8.2.6",
     "eslint": "^5.2.0",
     "eslint-config-xo-react": "^0.17.0",
     "eslint-plugin-react": "^7.10.0",
+    "reim": "^1.5.6",
     "xo": "^0.21.1"
   },
   "dependencies": {
