--- a/packages/reim/package.json
+++ b/packages/reim/package.json
@@ -51,7 +51,7 @@
   },
   "dependencies": {
     "auto-bind": "^1.2.1",
-    "event-emitter": "^0.3.5",
+    "event-emitter": "https://github.com/IniZio/event-emitter.git",
     "immer": "^1.5.0",
     "lodash": "^4.17.10"
   },
