--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -8,14 +8,16 @@
   },
   "devDependencies": {
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "parcel-bundler": "^1.9.7"
   },
   "dependencies": {
     "prop-types": "^15.6.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "react": "^16.0.0",
+    "react-dom": "^16.5.0",
     "react-reim": "*",
-    "reim": "*"
+    "reim": "*",
+    "skygear": "^1.6.3"
   }
 }
