--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "rollup": "^0.63.4",
     "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-commonjs": "^9.1.4",
+    "rollup-plugin-copy-glob": "^0.2.2",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-uglify": "^4.0.0",
     "to-pascal-case": "^1.0.0",
