--- a/packages/reim/package.json
+++ b/packages/reim/package.json
@@ -2,6 +2,7 @@
   "name": "reim",
   "version": "1.10.4",
   "license": "MIT",
+  "sideEffects": false,
   "main": "dist/reim.cjs.js",
   "module": "dist/reim.es.js",
   "unpkg": "dist/reim.js",
