--- a/packages/reim/package.json
+++ b/packages/reim/package.json
@@ -2,10 +2,12 @@
   "name": "reim",
   "version": "1.10.4",
   "license": "MIT",
+  "sideEffects": false,
   "main": "dist/reim.cjs.js",
   "module": "dist/reim.es.js",
   "unpkg": "dist/reim.js",
   "jsdelivr": "dist/reim.js",
+  "types": "dist/reim.d.ts",
   "files": [
     "dist",
     "lib",
@@ -14,7 +16,7 @@
   "scripts": {
     "start": "npm run dev",
     "dev": "bili --no-babel.babelrc --watch",
-    "build": "npm run build:dist",
+    "build": "npm run build:dist && cpx \"src/immer.{d.ts,js.flow}\" dist",
     "build:dist": "rimraf dist && bili --no-babel.babelrc"
   },
   "xo": {
