--- a/packages/reim-persist/package.json
+++ b/packages/reim-persist/package.json
@@ -1,7 +1,12 @@
 {
   "name": "reim-persist",
-  "version": "1.12.0",
+  "version": "1.12.1",
   "license": "MIT",
+  "keywords": [
+    "store",
+    "hoc",
+    "immer"
+  ],
   "main": "dist/reim-persist.cjs.js",
   "module": "dist/reim-persist.es.js",
   "unpkg": "dist/reim-persist.js",
@@ -43,7 +48,7 @@
     "eslint": "^5.2.0",
     "eslint-config-xo-react": "^0.17.0",
     "eslint-plugin-react": "^7.10.0",
-    "reim": "^1.12.0",
+    "reim": "^1.12.1",
     "xo": "^0.21.1"
   },
   "dependencies": {
