--- a/packages/react-reim/package.json
+++ b/packages/react-reim/package.json
@@ -1,7 +1,14 @@
 {
   "name": "react-reim",
-  "version": "1.12.0",
+  "version": "1.12.1",
   "license": "MIT",
+  "keywords": [
+    "reim",
+    "react",
+    "store",
+    "hoc",
+    "immer"
+  ],
   "main": "dist/react-reim.cjs.js",
   "module": "dist/react-reim.es.js",
   "unpkg": "dist/react-reim.js",
@@ -13,7 +20,7 @@
   },
   "devDependencies": {
     "react": "^16.4.2",
-    "reim": "^1.12.0"
+    "reim": "^1.12.1"
   },
   "dependencies": {
     "@types/react": "^16.4.14",
