--- a/packages/reim/package.json
+++ b/packages/reim/package.json
@@ -1,8 +1,15 @@
 {
   "name": "reim",
-  "version": "1.12.0",
+  "version": "1.12.1",
   "license": "MIT",
   "sideEffects": false,
+  "keywords": [
+    "reim",
+    "react",
+    "store",
+    "hoc",
+    "immer"
+  ],
   "main": "dist/reim.cjs.js",
   "module": "dist/reim.es.js",
   "unpkg": "dist/reim.js",
