--- a/packages/react-reim/package.json
+++ b/packages/react-reim/package.json
@@ -19,7 +19,7 @@
     "reim": "^1.9.0"
   },
   "devDependencies": {
-    "react": "^16.4.2",
+    "react": "^16.7.0-alpha.2",
     "reim": "^1.12.1"
   },
   "dependencies": {
