--- a/packages/reim/tsconfig.json
+++ b/packages/reim/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "lib": ["es7", "dom"],
     "outDir": "./dist",
     "rootDir": "./src",
     "declarationDir": "./dist",
