--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "lib": ["es7"],
+    "lib": ["es7", "dom"],
     "allowJs": false,
     "target": "es5",
     "outDir": "dist",
