--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "lib": ["es7", "dom"],
+    "jsx": "react",
     "allowJs": false,
     "target": "es5",
     "outDir": "dist",
@@ -11,6 +12,5 @@
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": [],
   "exclude": ["node_modules/**"]
 }
