refactor(typescript): everything typescript :O
Tests still failing tho...

--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "eslint-plugin-typescript": "^0.14.0",
     "get-lerna-packages": "^0.1.0",
     "husky": "^0.14.3",
-    "jest": "^23.4.2",
+    "jest": "^24.5.0",
     "lerna": "^2.11.0",
     "lint-staged": "^7.2.0",
     "react-test-renderer": "^16.7.0-alpha.2",
@@ -118,6 +118,7 @@
     "rollup-plugin-typescript2": "^0.20.1",
     "rollup-plugin-uglify": "^4.0.0",
     "to-pascal-case": "^1.0.0",
+    "ts-jest": "^24.0.0",
     "typescript": "^3.3.4000",
     "typesync": "^0.5.1",
     "uglify-es": "^3.3.9",
