--- a/packages/react-reim/package.json
+++ b/packages/react-reim/package.json
@@ -20,7 +20,8 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.123",
-    "react": "^16.7.0-alpha.2",
+    "@types/react": "^16.8.10",
+    "react": "^16.8.6",
     "reim": "^1.17.0"
   },
   "dependencies": {
