--- a/packages/react-reim/package.json
+++ b/packages/react-reim/package.json
@@ -13,19 +13,20 @@
   "module": "dist/react-reim.es.js",
   "unpkg": "dist/react-reim.js",
   "jsdelivr": "dist/react-reim.js",
-  "types": "dist/react-reim.d.ts",
+  "types": "dist/index.d.ts",
   "peerDependencies": {
     "react": "*",
     "reim": "^1.9.0"
   },
   "devDependencies": {
-    "react": "^16.7.0-alpha.2",
+    "@types/lodash": "^4.14.123",
+    "@types/react": "^16.8.10",
+    "react": "^16.8.6",
     "reim": "^1.17.0"
   },
   "dependencies": {
     "@types/react": "^16.4.14",
-    "lodash": "^4.17.10",
-    "prop-types": "^15.6.2"
+    "lodash": "^4.17.10"
   },
   "gitHead": "419591f08507517258271f77077dc7a1d5c1f7af"
 }
