fix(State): Replace getter/setter with filter/actions in State

--- a/packages/reim-persist/tsconfig.json
+++ b/packages/reim-persist/tsconfig.json
@@ -4,7 +4,8 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "declarationDir": "./dist",
-    "typeRoots" : ["./typings"]
+    "typeRoots" : ["./typings"],
+    "types": ["node", "jest"]
   },
   "include": [
     "./src",
