--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
     "jest": "^24.5.0",
     "lerna": "^2.11.0",
     "lint-staged": "^7.2.0",
-    "react-test-renderer": "^16.7.0-alpha.2",
+    "react-test-renderer": "^16.8.6",
     "regenerator-runtime": "^0.12.0",
     "rollup": "^0.63.4",
     "rollup-plugin-babel": "^3.0.7",
