--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     ]
   },
   "xo": {
-    "parser": "babel-eslint",
+    "parser": "@typescript-eslint/parser",
     "extends": [
       "xo-react",
       "xo-typescript"
@@ -70,7 +70,29 @@
         "warn",
         "consistent"
       ],
-      "react/button-has-type": 0
+      "@typescript-eslint/member-delimiter-style": ["warn"],
+      "@typescript-eslint/no-unused-vars": ["off"],
+      "@typescript-eslint/explicit-function-return-type": ["off"],
+      "@typescript-eslint/no-require-imports": ["off"],
+      "@typescript-eslint/no-var-requires": ["off"],
+      "react/button-has-type": 0,
+      "react/no-unused-state": "off",
+      "semi": [
+        "error",
+        "never"
+      ],
+      "@typescript-eslint/semi": [
+        "error",
+        "never"
+      ],
+      "@typescript-eslint/indent": [
+        "error",
+        2
+      ],
+      "indent": [
+        "error",
+        2
+      ]
     },
     "ignores": [
       "examples/**"
@@ -85,7 +107,8 @@
     "@types/rollup-plugin-commonjs": "^9.2.0",
     "@types/rollup-plugin-node-resolve": "^4.0.0",
     "@types/uglify-es": "^3.0.0",
-    "@typescript-eslint/eslint-plugin": "^1.5.0",
+    "@typescript-eslint/eslint-plugin": "^1.8.0",
+    "@typescript-eslint/parser": "^1.8.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-jest": "^23.4.2",
@@ -99,9 +122,10 @@
     "babel-preset-stage-2": "^6.24.1",
     "codacy-coverage": "^3.0.0",
     "cross-env": "^5.2.0",
-    "eslint": "^5.2.0",
+    "eslint": "^5.16.0",
+    "eslint-config-xo": "^0.26.0",
     "eslint-config-xo-react": "^0.17.0",
-    "eslint-config-xo-typescript": "^0.9.0",
+    "eslint-config-xo-typescript": "^0.11.0",
     "eslint-plugin-react": "^7.10.0",
     "eslint-plugin-typescript": "^0.14.0",
     "get-lerna-packages": "^0.1.0",
@@ -123,6 +147,6 @@
     "typescript": "^3.3.4000",
     "typesync": "^0.5.1",
     "uglify-es": "^3.3.9",
-    "xo": "^0.21.1"
+    "xo": "^0.24.0"
   }
 }
