--- a/package.json
+++ b/package.json
@@ -70,11 +70,21 @@
         "warn",
         "consistent"
       ],
-      "@typescript-eslint/member-delimiter-style": ["warn"],
-      "@typescript-eslint/no-unused-vars": ["off"],
-      "@typescript-eslint/explicit-function-return-type": ["off"],
-      "@typescript-eslint/no-require-imports": ["off"],
-      "@typescript-eslint/no-var-requires": ["off"],
+      "@typescript-eslint/member-delimiter-style": [
+        "warn"
+      ],
+      "@typescript-eslint/no-unused-vars": [
+        "off"
+      ],
+      "@typescript-eslint/explicit-function-return-type": [
+        "off"
+      ],
+      "@typescript-eslint/no-require-imports": [
+        "off"
+      ],
+      "@typescript-eslint/no-var-requires": [
+        "off"
+      ],
       "react/button-has-type": 0,
       "react/no-unused-state": "off",
       "semi": [
