--- a/packages/reim/package.json
+++ b/packages/reim/package.json
@@ -67,7 +67,7 @@
     "event-emitter": "^0.3.5",
     "fast-deep-equal": "^2.0.1",
     "immer": "^1.6.0",
-    "lodash": "^4.17.10"
+    "is-plain-object": "^3.0.0"
   },
   "gitHead": "419591f08507517258271f77077dc7a1d5c1f7af"
 }
