Add asdf and editorconfig

--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
+    "@changesets/cli": "^2.24.4",
     "eslint-config-custom": "*",
     "prettier": "latest",
     "turbo": "latest"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=18.10.0"
   },
   "dependencies": {},
   "packageManager": "yarn@1.22.19"
