--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -16,9 +16,12 @@
   },
   "scripts": {
     "dev": "tsc --declaration --emitDeclarationOnly --declarationDir ./dist/types -w & vite build --watch",
-    "build": "tsc --declaration --emitDeclarationOnly --declarationDir ./dist/types && vite build"
+    "build": "tsc --declaration --emitDeclarationOnly --declarationDir ./dist/types && vite build",
+    "lint": "eslint"
   },
   "devDependencies": {
+    "eslint": "7.32.0",
+    "eslint-config-custom": "*",
     "vite": "^2.9.9",
     "vite-plugin-dts": "^1.2.0"
   },
