--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@changesets/cli": "^2.24.4",
     "eslint-config-custom": "*",
     "prettier": "^2.7.1",
+    "prettier-plugin-organize-imports": "^3.1.1",
     "turbo": "latest"
   },
   "engines": {
