--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -15,7 +15,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "@reim/react": "*",
+    "@iniz/react": "*",
     "@types/node": "^17.0.12",
     "@types/react": "18.0.17",
     "eslint": "7.32.0",
