--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@reim/react",
+  "name": "@iniz/react",
   "version": "0.1.0",
   "license": "MIT",
   "publishConfig": {
@@ -32,7 +32,7 @@
     "vite-plugin-dts": "^1.2.0"
   },
   "dependencies": {
-    "@reim/core": "*",
+    "@iniz/core": "*",
     "proxy-state-tree": "^6.3.0",
     "typescript": "^4.8.3"
   },
