Add release workflow

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,9 +2,11 @@ name: CI
 
 on:
   push:
-    branches: ["experiment"]
+    branches: ["main"]
   pull_request:
     types: [opened, synchronize]
+
+concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 jobs:
   build:
