--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev --parallel",
-    "lint": "turbo run lint && prettier --check \"**/*.{ts,tsx,md}\"",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "lint": "turbo run lint && prettier --check \"**/*.{ts,tsx,md}\"",
+    "test": "turbo run test",
     "publish-packages": "turbo run build lint && changeset version && changeset publish"
   },
   "devDependencies": {
