Enable test in CI

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,5 +39,5 @@ jobs:
         - name: Lint
           run: yarn lint
 
-        # - name: Test
-        #   run: yarn test
+        - name: Test
+          run: yarn test
