--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -21,19 +21,27 @@
   "scripts": {
     "dev": "tsc --declaration --emitDeclarationOnly --declarationDir ./dist/types -w & vite build --watch",
     "build": "tsc --declaration --emitDeclarationOnly --declarationDir ./dist/types && vite build",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test": "vitest run --coverage",
+    "test:watch": "vitest watch --ui"
   },
   "devDependencies": {
-    "eslint": "7.32.0",
-    "eslint-config-custom": "*",
+    "@testing-library/react": "^13.4.0",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
+    "@vitejs/plugin-react": "^2.1.0",
+    "@vitest/coverage-c8": "^0.23.4",
+    "@vitest/ui": "^0.23.4",
+    "eslint": "7.32.0",
+    "eslint-config-custom": "*",
+    "happy-dom": "^7.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tsconfig": "*",
     "tsup": "^6.2.3",
     "vite": "^2.9.9",
-    "vite-plugin-dts": "^1.2.0"
+    "vite-plugin-dts": "^1.2.0",
+    "vitest": "^0.23.4"
   },
   "dependencies": {
     "@iniz/core": "*",
