--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,6 +2,10 @@
   "name": "@iniz/core",
   "version": "0.1.0",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/IniZio/iniz.git"
+  },
   "publishConfig": {
     "access": "public"
   },
