--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "publish-packages": "turbo run build lint && changeset version && changeset publish"
   },
   "devDependencies": {
+    "@changesets/changelog-github": "^0.4.7",
     "@changesets/cli": "^2.24.4",
     "eslint-config-custom": "*",
     "prettier": "^2.7.1",
