--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -26,7 +26,7 @@
     "test:watch": "vitest watch --ui"
   },
   "devDependencies": {
-    "@vitest/coverage-c8": "^0.23.4",
+    "@vitest/coverage-istanbul": "^0.24.0",
     "@vitest/ui": "^0.23.4",
     "eslint": "7.32.0",
     "eslint-config-custom": "*",
