--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -30,7 +30,7 @@
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
-    "@vitest/coverage-c8": "^0.23.4",
+    "@vitest/coverage-istanbul": "^0.24.0",
     "@vitest/ui": "^0.23.4",
     "eslint": "7.32.0",
     "eslint-config-custom": "*",
