--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -29,6 +29,7 @@
     "@testing-library/react": "^13.4.0",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
+    "@types/use-sync-external-store": "^0.0.3",
     "@vitejs/plugin-react": "^2.1.0",
     "@vitest/coverage-istanbul": "^0.24.0",
     "@vitest/ui": "^0.23.4",
@@ -46,7 +47,8 @@
   "dependencies": {
     "@iniz/core": "*",
     "proxy-state-tree": "^6.3.0",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.3",
+    "use-sync-external-store": "^1.2.0"
   },
   "peerDependencies": {
     "react": "17.x || 18.x"
