--- a/examples/react/tsconfig.json
+++ b/examples/react/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "extends": "tsconfig/nextjs.json",
+  "compilerOptions": {
+    "jsxImportSource": "@iniz/react"
+  },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
