--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -12,10 +12,23 @@
   "main": "./dist/index.umd.js",
   "module": "./dist/index.es.js",
   "types": "./dist/types/index.d.ts",
+  "sideEffects": false,
   "exports": {
     ".": {
       "import": "./dist/index.es.js",
       "require": "./dist/index.umd.js"
+    },
+    "./jsx-runtime": {
+      "module": {
+        "default": "./dist/jsx-runtime.es.js"
+      },
+      "default": "./dist/jsx-runtime.cjs.js"
+    },
+    "./jsx-dev-runtime": {
+      "module": {
+        "default": "./dist/jsx-dev-runtime.es.js"
+      },
+      "default": "./dist/jsx-dev-runtime.cjs.js"
     }
   },
   "scripts": {
@@ -40,13 +53,14 @@
     "react-dom": "^18.2.0",
     "tsconfig": "*",
     "tsup": "^6.2.3",
-    "vite": "^2.9.9",
+    "vite": "^3.1.7",
     "vite-plugin-dts": "^1.2.0",
-    "vitest": "^0.23.4"
+    "vite-plugin-static-copy": "^0.9.0",
+    "vitest": "^0.24.1"
   },
   "dependencies": {
     "@iniz/core": "*",
-    "proxy-state-tree": "^6.3.0",
+    "@vitejs/plugin-react": "^2.1.0",
     "typescript": "^4.8.3",
     "use-sync-external-store": "^1.2.0"
   },
