Add preact adaptor

--- a/examples/preact/package.json
+++ b/examples/preact/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@iniz/preact": "*",
     "preact": "^10.10.6"
   },
   "devDependencies": {
