--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "build": "turbo run build",
-    "dev": "turbo run dev --parallel",
+    "dev": "turbo run dev --filter=./packages/* --parallel",
     "format": "prettier --write --cache \"**/*.{ts,tsx,md}\"",
     "lint": "turbo run lint && prettier --check \"**/*.{ts,tsx,md}\"",
     "test": "turbo run test",
