--- a/packages/react/jsx-runtime/package.json
+++ b/packages/react/jsx-runtime/package.json
@@ -3,6 +3,6 @@
   "source": "../src/jsx-runtime.ts",
   "main": "../dist/jsx-runtime.cjs.js",
   "module": "../dist/jsx-runtime.es.js",
-  "types": "../dist/types/index.d.ts",
+  "types": "../dist/types/jsx-runtime.d.ts",
   "sideEffects": false
 }
