--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -30,11 +30,9 @@
     "@vitest/ui": "^0.23.4",
     "eslint": "7.32.0",
     "eslint-config-custom": "*",
+    "typescript": "^4.8.3",
     "vite": "^2.9.9",
     "vite-plugin-dts": "^1.2.0",
     "vitest": "^0.23.4"
-  },
-  "dependencies": {
-    "typescript": "^4.8.3"
   }
 }
