--- a/packages/preact/package.json
+++ b/packages/preact/package.json
@@ -45,18 +45,17 @@
     "eslint": "7.32.0",
     "eslint-config-custom": "*",
     "happy-dom": "^7.4.0",
+    "preact": "^10.11.2",
     "tsconfig": "*",
     "tsup": "^6.2.3",
     "vite": "^3.1.7",
     "vite-plugin-dts": "^1.2.0",
     "vite-plugin-static-copy": "^0.9.0",
-    "vitest": "^0.24.1"
+    "vitest": "^0.24.1",
+    "typescript": "^4.8.3"
   },
   "dependencies": {
-    "@iniz/core": "*",
-    "@vitejs/plugin-react": "^2.1.0",
-    "preact": "^10.11.2",
-    "typescript": "^4.8.3"
+    "@iniz/core": "*"
   },
   "peerDependencies": {
     "preact": "*"
