--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -19,14 +19,13 @@
     }
   },
   "scripts": {
-    "dev": "tsc --noEmit -w & vite build --watch",
-    "build": "tsc --noEmit && vite build",
+    "dev": "tsc --declaration --emitDeclarationOnly --declarationDir ./dist/types -w & vite build --watch",
+    "build": "tsc --declaration --emitDeclarationOnly --declarationDir ./dist/types && vite build",
     "lint": "eslint",
     "test": "vitest run --coverage",
     "test:watch": "vitest watch --ui"
   },
   "devDependencies": {
-    "@rollup/plugin-typescript": "^9.0.2",
     "@vitest/coverage-istanbul": "^0.24.0",
     "@vitest/ui": "^0.23.4",
     "eslint": "7.32.0",
