--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -9,13 +9,13 @@
   "publishConfig": {
     "access": "public"
   },
-  "main": "./dist/index.umd.js",
+  "main": "./dist/index.cjs.js",
   "module": "./dist/index.es.js",
   "types": "./dist/types/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/index.es.js",
-      "require": "./dist/index.umd.js"
+      "require": "./dist/index.cjs.js"
     }
   },
   "scripts": {
