--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -9,14 +9,14 @@
   "publishConfig": {
     "access": "public"
   },
-  "main": "./dist/index.umd.js",
+  "main": "./dist/index.cjs.js",
   "module": "./dist/index.es.js",
   "types": "./dist/types/index.d.ts",
   "sideEffects": false,
   "exports": {
     ".": {
       "import": "./dist/index.es.js",
-      "require": "./dist/index.umd.js"
+      "require": "./dist/index.cjs.js"
     },
     "./jsx-runtime": {
       "module": {
