--- a/package.json
+++ b/package.json
@@ -3,15 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "workspaces": [
-    "website",
     "examples/*",
     "packages/*"
   ],
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev --filter=./packages/* --parallel",
-    "format": "prettier --write --cache \"**/*.{ts,tsx,md}\"",
-    "lint": "turbo run lint && prettier --check \"**/*.{ts,tsx,md}\"",
+    "format": "prettier --write --cache \"**/*.{ts,tsx,md,mdx}\"",
+    "lint": "turbo run lint && prettier --check \"**/*.{ts,tsx,md,mdx}\"",
     "test": "turbo run test",
     "publish-packages": "turbo run build lint && changeset version && changeset publish"
   },
