--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -6,8 +6,9 @@
   "dependencies": {
     "eslint-config-next": "^12.0.8",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-config-turbo": "latest",
     "eslint-plugin-react": "7.28.0",
-    "eslint-config-turbo": "latest"
+    "next": "12.3.0"
   },
   "publishConfig": {
     "access": "public"
