--- a/website/package.json
+++ b/website/package.json
@@ -15,13 +15,19 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@codesandbox/sandpack-react": "^1.17.0",
     "@docusaurus/core": "2.2.0",
     "@docusaurus/preset-classic": "2.2.0",
+    "@docusaurus/theme-live-codeblock": "^2.2.0",
+    "@iniz/react": "*",
     "@mdx-js/react": "^1.6.22",
+    "autoprefixer": "^10.4.13",
     "clsx": "^1.2.1",
+    "postcss": "^8.4.18",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "tailwindcss": "^3.2.1"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.2.0",
@@ -39,8 +45,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "engines": {
-    "node": ">=16.14"
   }
 }
