--- a/website/package.json
+++ b/website/package.json
@@ -19,7 +19,7 @@
     "@docusaurus/core": "2.2.0",
     "@docusaurus/preset-classic": "2.2.0",
     "@docusaurus/theme-live-codeblock": "^2.2.0",
-    "@iniz/react": "*",
+    "@iniz/react": "workspace:*",
     "@mdx-js/react": "^1.6.22",
     "autoprefixer": "^10.4.13",
     "clsx": "^1.2.1",
