--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -15,13 +15,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "@iniz/react": "*",
+    "@iniz/react": "workspace:*",
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.21",
     "eslint": "7.32.0",
-    "eslint-config-custom": "*",
+    "eslint-config-custom": "workspace:*",
     "next-transpile-modules": "9.0.0",
-    "tsconfig": "*",
+    "tsconfig": "workspace:*",
     "typescript": "^4.5.3"
   }
 }
