--- a/examples/vite/package.json
+++ b/examples/vite/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@iniz/react": "*",
+    "@iniz/react": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
