--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -29,8 +29,9 @@
     "@vitest/coverage-istanbul": "^0.24.0",
     "@vitest/ui": "^0.23.4",
     "eslint": "7.32.0",
-    "eslint-config-custom": "*",
+    "eslint-config-custom": "workspace:*",
     "typescript": "^4.8.3",
+    "tsconfig": "workspace:*",
     "vite": "^2.9.9",
     "vite-plugin-dts": "^1.2.0",
     "vitest": "^0.23.4"
