--- a/packages/preact/package.json
+++ b/packages/preact/package.json
@@ -43,10 +43,10 @@
     "@vitest/coverage-istanbul": "^0.24.0",
     "@vitest/ui": "^0.23.4",
     "eslint": "7.32.0",
-    "eslint-config-custom": "*",
+    "eslint-config-custom": "workspace:*",
     "happy-dom": "^7.4.0",
     "preact": "^10.11.2",
-    "tsconfig": "*",
+    "tsconfig": "workspace:*",
     "tsup": "^6.2.3",
     "vite": "^3.1.7",
     "vite-plugin-dts": "^1.2.0",
@@ -55,7 +55,7 @@
     "typescript": "^4.8.3"
   },
   "dependencies": {
-    "@iniz/core": "*"
+    "@iniz/core": "workspace:*"
   },
   "peerDependencies": {
     "preact": "*"
