--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -53,11 +53,11 @@
     "@vitest/coverage-istanbul": "^0.24.0",
     "@vitest/ui": "^0.23.4",
     "eslint": "7.32.0",
-    "eslint-config-custom": "*",
+    "eslint-config-custom": "workspace:*",
     "happy-dom": "^7.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tsconfig": "*",
+    "tsconfig": "workspace:*",
     "tsup": "^6.2.3",
     "typescript": "^4.8.3",
     "vite": "^3.1.7",
@@ -66,7 +66,7 @@
     "vitest": "^0.24.1"
   },
   "dependencies": {
-    "@iniz/core": "*",
+    "@iniz/core": "workspace:*",
     "use-sync-external-store": "^1.2.0"
   },
   "peerDependencies": {
