--- a/packages/preact/package.json
+++ b/packages/preact/package.json
@@ -43,9 +43,9 @@
     "@vitest/coverage-istanbul": "^0.24.0",
     "@vitest/ui": "^0.23.4",
     "eslint": "7.32.0",
-    "eslint-config-custom": "workspace:*",
+    "@iniz/eslint-config-internal": "workspace:*",
     "happy-dom": "^7.4.0",
-    "preact": "^0.0.1",
+    "preact": "^10.11.2",
     "tsconfig": "workspace:*",
     "tsup": "^6.2.3",
     "vite": "^3.1.7",
