--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -19,7 +19,7 @@
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.21",
     "eslint": "7.32.0",
-    "eslint-config-custom": "workspace:*",
+    "@iniz/eslint-config-internal": "workspace:*",
     "next-transpile-modules": "9.0.0",
     "tsconfig": "workspace:*",
     "typescript": "^4.5.3"
