--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.7",
     "@changesets/cli": "^2.24.4",
-    "eslint-config-custom": "workspace:*",
+    "@iniz/eslint-config-internal": "workspace:*",
     "prettier": "^2.7.1",
     "prettier-plugin-organize-imports": "^3.1.1",
     "turbo": "latest"
