--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -29,7 +29,7 @@
     "@vitest/coverage-istanbul": "^0.24.0",
     "@vitest/ui": "^0.23.4",
     "eslint": "7.32.0",
-    "eslint-config-custom": "workspace:*",
+    "@iniz/eslint-config-internal": "workspace:*",
     "typescript": "^4.8.3",
     "tsconfig": "workspace:*",
     "vite": "^2.9.9",
