--- a/packages/eslint-config-internal/package.json
+++ b/packages/eslint-config-internal/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eslint-config-custom",
+  "name": "@iniz/eslint-config-internal",
   "version": "0.0.0",
   "license": "MIT",
   "main": "index.js",
