--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -53,7 +53,7 @@
     "@vitest/coverage-istanbul": "^0.24.0",
     "@vitest/ui": "^0.23.4",
     "eslint": "7.32.0",
-    "eslint-config-custom": "workspace:*",
+    "@iniz/eslint-config-internal": "workspace:*",
     "happy-dom": "^7.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
