--- a/packages/eslint-config-internal/package.json
+++ b/packages/eslint-config-internal/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@iniz/eslint-config-internal",
+  "private": true,
   "version": "0.0.0",
   "license": "MIT",
   "main": "index.js",
@@ -9,8 +10,5 @@
     "eslint-config-turbo": "latest",
     "eslint-plugin-react": "7.28.0",
     "next": "12.3.0"
-  },
-  "publishConfig": {
-    "access": "public"
   }
 }
