--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -12,7 +12,9 @@
   "main": "./dist/index.cjs.js",
   "module": "./dist/index.es.js",
   "types": "./dist/types/index.d.ts",
-  "sideEffects": false,
+  "sideEffects": [
+    "./src/createElement.ts"
+  ],
   "exports": {
     ".": {
       "import": "./dist/index.es.js",
